gcc/testsuite/g++.dg/modules/mod-decl-3_b.C

namespace Bink
{
  import bob; // { dg-error "appear at global scope" }
}
